crates/sdk/tests/macros/error_emit_non_event.stderr
error[E0277]: (calimero)> `NotAnEvent` cannot be emitted — it is not an app event
  --> tests/macros/error_emit_non_event.rs:18:20
   |
18 |         app::emit!(NotAnEvent);
   |         -----------^^^^^^^^^^-
   |         |          |
   |         |          not an `#[app::event]` type
   |         required by a bound introduced by this call
   |
   = help: the trait `AppEventExt` is not implemented for `NotAnEvent`
   = note: `app::emit!(...)` only accepts an enum annotated with `#[app::event]`. Define `#[app::event] pub enum Event { ... }` and emit one of its variants.
   = help: the trait `AppEventExt` is implemented for `NoEvent`
note: required by a bound in `calimero_sdk::event::emit`
  --> src/event.rs
   |
   | pub fn emit<'a, E: AppEventExt + 'a>(event: E) {
   |                    ^^^^^^^^^^^ required by this bound in `emit`
